syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "pkg/grpc";

package game;

service GameService {
    // 自身の移動をサーバーに通知する
	rpc Move (stream MoveRequest) returns (google.protobuf.Empty);
    // 他のキャラクタの移動をクライアントに通知する
    rpc MoveServerStream (MoveServerStreamRequest) returns (stream MoveServerStreamResponse);
}

message Character {
    string userID = 1;
    float timestamp = 2;
    float positionX = 3;
    float positionY = 4;
    float positionZ = 5;
    float rotationZ = 6;
}

message MoveRequest {
    Character character = 1;
}

message MoveServerStreamRequest {
    string userID = 1;
}

message MoveServerStreamResponse {
	repeated Character characters = 1;
}